swagger doc update
